--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -69,7 +69,7 @@
                             </div>
                             <div class="select-form">
                                 <div class="select-itms">
-                                    <select name="select" id="select1">
+                                    <select class="selectt" name="select" id="select1">
                                       <option value="">All Catagories</option>
                                       <option value="">Catagories One</option>
                                       <option value="">Catagories Two</option>
@@ -179,7 +179,7 @@
     </div>
     <!-- Popular Locations End -->
     <!-- Services Area Start -->
-    <div class="services-area pt-150 pb-150 section-bg" data-background="assets/img/gallery/section_bg02.jpg">
+    <div class="services-area pt-150 pb-150 section-bg" data-background="">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
