--- a/src/app/layout/shared/header/header.component.html
+++ b/src/app/layout/shared/header/header.component.html
@@ -18,18 +18,18 @@
                                     <ul id="navigation">
                                         <li><a routerLink="/">Home</a></li>
                                         <li><a routerLink="/about">About</a></li>
-                                        <li><a href="catagori.html">Catagories</a></li>
-                                        <li><a href="listing.html">Listing</a></li>
+                                        <li><a routerLink="/catagori">Catagories</a></li>
+                                        <li><a routerLink="/listing">Listing</a></li>
                                         <li><a href="#">Page</a>
                                             <ul class="submenu">
-                                                <li><a href="blog.html">Blog</a></li>
-                                                <li><a href="blog_details.html">Blog Details</a></li>
-                                                <li><a href="elements.html">Element</a></li>
-                                                <li><a href="listing_details.html">Listing details</a></li>
+                                                <li><a routerLink="/blog">Blog</a></li>
+                                                <li><a routerLink="/blog-details">Blog Details</a></li>
+                                                <li><a routerLink="/element">Element</a></li>
+                                                <li><a routerLink="/add-list">Listing details</a></li>
                                             </ul>
                                         </li>
-                                        <li><a href="contact.html">Contact</a></li>
-                                        <li class="add-list"><a href="listing_details.html"><i class="ti-plus"></i> add Listing</a></li>
+                                        <li><a routerLink="/contact-us">Contact</a></li>
+                                        <li class="add-list"><a routerLink="/add-list"><i class="ti-plus"></i> add Listing</a></li>
                                         <li class="login">
                                             <a href="#">
                                                 <i class="ti-user"></i> Sign in or Register</a>
